--- a/EX2/index.html
+++ b/EX2/index.html
@@ -1,1 +1,16 @@
-
+<!DOOCTYPE html>
+<html>
+ <head>
+  <title>Home</title>
+ </head>
+ <body bgcolor="#bcbcbc">
+  <h4>Computer Langauge</h4>
+  <p>Computer Langauge are used communicate with Computer</p>
+  <ul>
+   <li><a href="html.html"><abbr title="Hypertext Markup Langauge">HTML</abbr></a></li>
+   <li><a href="css.html"><abbr title="Cascading Style Sheet">CSS</abbr></a></li>
+   <li><a href="js.html"><abbr title="JavaScript">JS</abbr></a></li>
+   <li><a href="py.html">Python</a></li>
+  </ul>
+ </body>
+</html>
