--- a/EX5/index.html
+++ b/EX5/index.html
@@ -10,7 +10,7 @@
 
     body{
 
-      background-image: url('/bg.jpg');
+      background-image: url('bg.jpg');
 
       background-repeat: no-repeat;
 
