--- a/EX4/index.html
+++ b/EX4/index.html
@@ -64,6 +64,11 @@
   <body>
    <div class="tt">
      <table>
+       <thead>
+         <caption style="margin: 24px; text-decoration: underline; font-size: 32px;">
+           <b>Time Table II-Year CT Department</b>
+         </caption>
+       </thead>
        <tr>
          <th class="q">Time<br>Peroid</th>
          <th>09:00A.M-09:50A.M<br>1</th>
