--- a/EX6/frame3.html
+++ b/EX6/frame3.html
@@ -1,5 +1,5 @@
 <html>
   <body>
-    <h4>Frames and Event using HTML &amp; JS</h4>
+    <h4>Frames and Event using html &amp; js</h4>
   </body>
 </html>
